0.6.3 (currently working on)
- [#2330] Change: Make the begin date in time slots required
- [#2261] Change: add unit tests for isOwnerFeUser
- [#2318] Change: Make some fields in the time slots excludefields
- [#1897] Fix: Double assignment in a code line
- [#1901] Feature: Use more SQL indices
- [#2204] Fix: tx_seminars_bag::getObjectCountWithLimit() returns null
- [#1916, #2093] Change: Use the createFakeFrontEnd function from the testing framework in the Seminar Manager
- [#1137] Change: Change =& new to = new and remove the & from before function names

0.6.2 (released 2008-09-04)
- [#2156] Add a Dutch manual, thanks to Nico Deblauwe
- [#1945] Change: Some code clean-up
- [#2151] Fix: tx_seminars_templatehelper::getSubpartForCallback has to be protected in PHP 5.3
- [#2145] Change: Use an array and a foreach loop in createListHeader()
- [#2020] Fix: The "other dates for this topic" list shows also single events
- [#2076] Fix: Date not linked in the "other dates for this topic" list
- [#2113] Fix: The limits in the bag builders could not be unset
- [#2105] Change: Remove the empty option from the top of the event type selector widget
- [#2074] Change: Add some tests and some code cleanup
- [#803] Change: Remove the _doEvents() method from the registration editor and the event editor
- [#964] Change: some code cleanup
- [#2092] Change: Update the test record icon in seminars and oelib
- [#2067] Change: All fields from the FE user table should be usable in the notification e-mail
- [#1902] Fix: "Reset filter" doesn't work
- [#2003] Fix: Empty lines in the FE user data on the second registration page
- [#2001] Fix: City of event site doesn't appear in the event single view although it's entered in the BE
- [#2011] Fix: hideFieldsInNotificationMail doesn't work
- [#2018] Fix: Hidden single events still are visible in the list view limited to a category
- [#1977] Change: add some unit tests